tests/baselines/reference/typeGuardAccordingToProperty.errors.txt
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToProperty.ts(25,11): error TS2339: Property 's1' does not exist on type 'Test1 | Test2'.
  Property 's1' does not exist on type 'Test2'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToProperty.ts(26,11): error TS2339: Property 's2' does not exist on type 'Test1 | Test2'.
  Property 's2' does not exist on type 'Test1'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToProperty.ts(34,11): error TS2339: Property 's1' does not exist on type 'Test1 | Test2'.
  Property 's1' does not exist on type 'Test2'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToProperty.ts(35,11): error TS2339: Property 's2' does not exist on type 'Test1 | Test2'.
  Property 's2' does not exist on type 'Test1'.


==== tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToProperty.ts (4 errors) ====
    interface Test1 {
        somekey: boolean;
        s1: number;
    };
    
    interface Test2 {
        somekey: boolean;
        s2: number;
    };
    
    interface Test3 {
        somekey: number;
        s3: number;
    };
    
    type Union1 =Test1|Test2|Test3;
    
    function f1(u: Union1){
        if(typeof u.somekey !== 'boolean'){
            u;     // Test3
            u.s3;   // number
        }
        if(typeof u.somekey === 'boolean'){
            u;      // Test1 | Test2
            u.s1;   // Error
              ~~
!!! error TS2339: Property 's1' does not exist on type 'Test1 | Test2'.
!!! error TS2339:   Property 's1' does not exist on type 'Test2'.
            u.s2;   // Error
              ~~
!!! error TS2339: Property 's2' does not exist on type 'Test1 | Test2'.
!!! error TS2339:   Property 's2' does not exist on type 'Test1'.
        }
        if(typeof u.somekey != 'boolean'){
            u;     // Test3
            u.s3;
        }
        if(typeof u.somekey == 'boolean'){
            u;     // Test1 | Test2
            u.s1;   // Error
              ~~
!!! error TS2339: Property 's1' does not exist on type 'Test1 | Test2'.
!!! error TS2339:   Property 's1' does not exist on type 'Test2'.
            u.s2;   // Error
              ~~
!!! error TS2339: Property 's2' does not exist on type 'Test1 | Test2'.
!!! error TS2339:   Property 's2' does not exist on type 'Test1'.
        }
    }
    
    function f1_Plus(u: Union1){
        if(typeof u.somekey !== 'boolean'){
            throw new Error();
        }
        u;  // Test1 | Test2
        if(typeof u.somekey === 'boolean'){
            throw new Error();
        }
        u;  // never
    }
    
    interface A { x: string, y: string };
    interface B { x: number, y: number };
    type X = A | B;
    
     function f2(bar:X){
        if (typeof bar.x === 'string') {
            let y = bar.y; // string
        }
     }
    
    /////////////////////////////////////////////////////////
    //  some case that need discuss further, This is not that right.
    function f1_(u: Union1){
        const tmp1 = u.somekey;
        if(typeof tmp1 !== 'boolean'){
            u;     //Union1
            u.somekey;      //number | boolean
        }
    }
    
    